--- a/public/assets/styles.css
+++ b/public/assets/styles.css
@@ -4,3 +4,47 @@ pair Questrial with Lato
 * {
     font-family: Questrial, "Times New Roman", sans-serif;
 }
+
+body {
+    margin: 0;
+}
+
+/*.flex {*/
+    /*display: flex;*/
+/*}*/
+
+/*
+make another class for text to break this up a bit
+also, make a hover feature for the text
+*/
+nav.nav-bar {
+    display: flex;
+    position: fixed;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+    height: 8vh;
+    margin: 0; padding: 0;
+    background-color: rgba(115, 99, 87, 0.8);
+    color: ghostwhite;
+    border-radius: 0 0 15px 15px;
+}
+
+/*!* all carousel items are .flex  *!*/
+/*#carousel {*/
+    /*height: 100vh;*/
+    /*justify-content: center;*/
+    /*align-items: center;*/
+/*}*/
+
+/*.carousel-image {*/
+    /*position: absolute;*/
+/*}*/
+
+/*#carousel-text {*/
+    /*position: absolute;*/
+    /*z-index: 1;*/
+    /*color: white;*/
+    /*text-shadow: 2px 3px black;*/
+    /*font-size: 135%;*/
+/*}*/
