--- a/public/assets/styles.css
+++ b/public/assets/styles.css
@@ -9,6 +9,8 @@ body {
 }
 
 nav.nav-bar {
+    top: 0;
+    z-index: 1;
     display: flex;
     position: fixed;
     justify-content: space-around;
@@ -16,13 +18,20 @@ nav.nav-bar {
     width: 100%;
     height: 8vh;
     margin: 0; padding: 0;
-    background-color: rgba(115, 99, 87, 0.8);
+    background-color: rgba(0, 0, 0, 0.9);
     color: ghostwhite;
     border-radius: 0 0 15px 15px;
 }
 
+.logo {
+    display: flex;
+    align-items: center;
+    width: 40%;
+    height: 40%;
+}
+
 h3:hover {
-    color: black;
+    color: #e00a10;
 }
 
 a {
@@ -31,7 +40,7 @@ a {
 }
 
 footer {
-    bottom: 0;
+    bottom: -96px;
     display: flex;
     position: absolute;
     justify-content: space-between;
@@ -46,22 +55,3 @@ footer {
 span {
     padding: 0 10px;
 }
-
-/*!* all carousel items are display: flex;  *!*/
-/*#carousel {*/
-    /*height: 100vh;*/
-    /*justify-content: center;*/
-    /*align-items: center;*/
-/*}*/
-
-/*.carousel-image {*/
-    /*position: absolute;*/
-/*}*/
-
-/*#carousel-text {*/
-    /*position: absolute;*/
-    /*z-index: 1;*/
-    /*color: white;*/
-    /*text-shadow: 2px 3px black;*/
-    /*font-size: 135%;*/
-/*}*/
