--- a/public/assets/styles.css
+++ b/public/assets/styles.css
@@ -30,8 +30,14 @@ nav.nav-bar {
     height: 40%;
 }
 
+.logo:hover {
+    transform: scale(1.1);
+    transition: 0.15s ease;
+}
+
 h3:hover {
     color: #e00a10;
+    transition: 0.15s ease-in;
 }
 
 a {
@@ -48,7 +54,7 @@ footer {
     width: 100%;
     height: 4vh;
     margin: 0; padding: 0;
-    background-color: rgba(1, 2, 29, 0.8);
+    background-color: rgba(1, 2, 29, 0.9);
     color: ghostwhite;
 }
 
