--- a/public/assets/styles.css
+++ b/public/assets/styles.css
@@ -91,6 +91,7 @@ button {
     align-items: center;
     flex-wrap: wrap;
     text-align: center;
+    padding: 20px;
 }
 
 .media-object {
@@ -106,6 +107,12 @@ button {
     margin-top: -15px;
     margin-bottom: -0.5px;
     font-size: 20pt;
+}
+
+form {
+    display: flex;
+    padding: 300px 0 0 300px;
+    color: ghostwhite;
 }
 
 footer {
